web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-arrow-param-lhs/strict-mode-parent-not-current-async/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (3,12)
3|    async (await) => {
 |          ^
